--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,10 @@ a {
     color           : var(--blue-zodiac);
 }
 
+.topbar .navsbtns {
+    margin-left: auto;
+}
+
 .bottom_line hr,
 .footer_top_line hr {
     opacity: 0.12;
@@ -117,6 +121,10 @@ a {
 
 .custom_dropdown .drop_menu li:hover {
     background-color: transparent;
+}
+
+.custom_dropdown a i {
+    margin-right: 4px;
 }
 
 .custom_dropdown .drop_menu2 li a:hover {
@@ -204,7 +212,7 @@ a {
     font-size    : 14px;
     color        : var(--blue-zodiac);
     filter       : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
-    padding      : 7px 38px 7px 8px;
+    padding      : 7px 30px 7px 8px;
     border-radius: 5px;
     transition   : 0.3s;
     width        : 100%;
@@ -244,8 +252,9 @@ a {
 }
 
 .add_post i {
-    color    : var(--blue-zodiac);
-    font-size: 25px;
+    color       : var(--blue-zodiac);
+    font-size   : 25px;
+    margin-right: 4px;
 }
 
 .search-bar,
@@ -458,6 +467,10 @@ a {
     border-radius   : 7px;
 }
 
+.info_btn {
+    margin-left: 22px;
+}
+
 .notification_icon .notification_toggle {
     width           : 81px;
     height          : 81px;
@@ -544,6 +557,10 @@ a {
 .custom_checks {
     background-color: var(--white);
     filter          : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.1));
+}
+
+.custom_checks label {
+    padding-left: 7px;
 }
 
 .policieschecks {
