--- a/assets/css/stylertl.css
+++ b/assets/css/stylertl.css
@@ -124,9 +124,14 @@ a {
     background-color: transparent;
 }
 
+.custom_dropdown a i {
+    margin-left: 4px;
+}
+
 .custom_dropdown .drop_menu2 li a:hover {
     background-color: var(--white-smoke) !important;
 }
+
 
 .custom_dropdown .drop_menu2 li a {
     height     : 50px;
@@ -209,7 +214,7 @@ a {
     font-size    : 14px;
     color        : var(--blue-zodiac);
     filter       : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
-    padding      : 7px 38px 7px 8px;
+    padding      : 7px 8px 7px 30px;
     border-radius: 5px;
     transition   : 0.3s;
     width        : 100%;
@@ -227,11 +232,11 @@ a {
 }
 
 .search-form button {
-    border     : 0;
-    padding    : 0;
-    margin-left: -25px;
-    background : none;
-    z-index    : 1;
+    border      : 0;
+    padding     : 0;
+    margin-right: -25px;
+    background  : none;
+    z-index     : 1;
 }
 
 .search-form button i {
@@ -249,8 +254,9 @@ a {
 }
 
 .add_post i {
-    color    : var(--blue-zodiac);
-    font-size: 25px;
+    color      : var(--blue-zodiac);
+    font-size  : 25px;
+    margin-left: 4px;
 }
 
 .search-bar,
@@ -408,7 +414,7 @@ a {
 .heading span:before {
     content      : " ";
     border-bottom: 2px solid var(--leather);
-    left         : 0;
+    right        : 0;
     position     : absolute;
     top          : 0;
     bottom       : -15px;
@@ -463,6 +469,10 @@ a {
     border-radius   : 7px;
 }
 
+.info_btn {
+    margin-right: 22px;
+}
+
 .notification_icon .notification_toggle {
     width           : 81px;
     height          : 81px;
@@ -477,7 +487,7 @@ a {
 
 .dropup .badge-number {
     position   : absolute;
-    inset      : 12px -11px auto auto;
+    inset      : 12px 66px auto auto;
     font-weight: bold;
     font-size  : 15px;
     padding    : 7px 10px;
@@ -549,6 +559,14 @@ a {
 .custom_checks {
     background-color: var(--white);
     filter          : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.1));
+}
+
+.custom_checks label {
+    padding-right: 7px;
+}
+
+.slidertlimgs div {
+    direction: rtl;
 }
 
 .policieschecks {
@@ -650,6 +668,7 @@ a {
     margin-left: -25px;
     background : none;
     z-index    : 1;
+    rotate     : -90deg;
 }
 
 .newsletter_form button i {
@@ -657,7 +676,8 @@ a {
 }
 
 .footer_end p {
-    color: var(--blue-zodiac);
+    color     : var(--blue-zodiac);
+    text-align: right;
 }
 
 .footer_end a {
@@ -1492,14 +1512,13 @@ button:focus {
 
     .ms_screennav_item .nav-link::after {
         position      : absolute;
-        right         : 0px;
+        left          : 0px;
         vertical-align: middle;
-        content       : url('../images/icons/rightarrow_11x16.png');
+        content       : url('../images/icons/leftarrow_11x16.png');
     }
 
-    .navbar .dropdown-toggle::after {
-        position: absolute;
-        right   : 0px;
+    .custom_dropdown .dropdown-toggle::after {
+        text-align: end;
     }
 
     .searchaddicon {
@@ -1589,6 +1608,10 @@ button:focus {
 
     .dropdownregion {
         border-radius: 20px 0 0 20px;
+    }
+
+    .footer_end p {
+        text-align: center !important;
     }
 
 }
