--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ a {
 .addpost_heading,
 .product_detail,
 .about_heading {
-    padding-top: 146px;
+    padding-top: 163px;
 }
 
 .item_carousel {
@@ -1406,6 +1406,11 @@ button:focus {
 }
 
 @media (max-width: 767px) {
+    .message-area {
+        overflow  : hidden;
+        padding   : 70px 0 30px 0;
+        background: var(--white);
+    }
 
     .chat-icon,
     .profile-icon {
