--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,7 +1015,7 @@ a {
     width           : 100%;
     background-color: #fff;
     border-radius   : 0.3rem;
-    height          : 90vh;
+    height          : 100vh;
     overflow        : hidden;
     min-height      : calc(100% - 1rem);
     display         : flex;
@@ -1063,7 +1063,7 @@ a {
 .chat-area .form-control {
     display           : block;
     width             : 90%;
-    padding           : 0.375rem 0.75rem;
+    padding           : 6px 8px 8px 35px;
     font-size         : 14px;
     font-weight       : 400;
     line-height       : 1.5;
@@ -1078,9 +1078,20 @@ a {
     transition        : border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+.chatsearchbtn button {
+    position  : absolute;
+    top       : 4px;
+    left      : -3px;
+    background: transparent;
+}
+
 .chat-area .form-control:focus {
     outline   : 0;
     box-shadow: inherit;
+}
+
+.chat-lists .modal-body {
+    padding: 0;
 }
 
 .chat-list h3 {
@@ -1105,6 +1116,11 @@ a {
     margin-bottom  : 15px;
     position       : relative;
     text-decoration: none;
+
+}
+
+.chat-list a:focus {
+    background-color: var(--white-smoke);
 }
 
 .chat-list .active {
@@ -1121,6 +1137,18 @@ a {
     border       : 2px solid #fff;
 }
 
+.nameuserchat h3 {
+    color: #202020;
+}
+
+.nameuserchat p {
+    color: #47464A;
+}
+
+.timehours p {
+    color: #84818A;
+}
+
 .online {
     margin-bottom  : 15px;
     position       : relative;
@@ -1133,12 +1161,24 @@ a {
     clear        : both;
     position     : absolute;
     bottom       : 6px;
-    left         : -13px;
-    height       : 9px;
-    width        : 9px;
+    left         : -10px;
+    height       : 8px;
+    width        : 8px;
     background   : #00DB75;
     border-radius: 50%;
-    border       : 2px solid #fff;
+}
+
+.online .activedotsmall {
+    display      : block;
+    content      : '';
+    clear        : both;
+    position     : absolute;
+    bottom       : 18px;
+    left         : -10px;
+    height       : 8px;
+    width        : 8px;
+    background   : #00DB75;
+    border-radius: 50%;
 }
 
 .msg-head h3 {
@@ -1159,14 +1199,22 @@ a {
 }
 
 .msg-head {
-    padding         : 15px;
-    /* border-bottom: 1px solid #ccc; */
+    padding: 15px;
+    display: block;
+}
+
+.msghead_smalscreen a {
+    color: var(--blue-zodiac);
+}
+
+.msghead_smalscreen {
+    display: none;
 }
 
 
 .moreoption {
     display        : flex;
-    align-items    : center;
+    align-items    : center !important;
     justify-content: end;
 }
 
@@ -1180,35 +1228,13 @@ a {
     margin    : 15px 0;
 }
 
-.msg-body ul li.sender {
-    display : block;
-    width   : 100%;
-    position: relative;
-}
-
-.msg-body ul li.sender:before {
-    display          : block;
-    clear            : both;
-    content          : '';
-    position         : absolute;
-    top              : -6px;
-    left             : -7px;
-    width            : 0;
-    height           : 0;
-    border-style     : solid;
-    border-width     : 0 12px 15px 12px;
-    border-color     : transparent transparent var(--white) transparent;
-    -webkit-transform: rotate(-37deg);
-    -ms-transform    : rotate(-37deg);
-    transform        : rotate(-37deg);
-}
 
 .msg-body ul li.sender p {
     color                     : var(--blue-zodiac);
     font-size                 : 14px;
     line-height               : 1.5;
     font-weight               : 400;
-    padding                   : 15px;
+    padding                   : 5px 8px 5px 8px;
     background                : var(--white);
     display                   : inline-block;
     border-bottom-left-radius : 10px;
@@ -1217,56 +1243,19 @@ a {
     margin-bottom             : 0;
 }
 
-.msg-body ul li.sender p b {
-    display    : block;
-    color      : #180660;
-    font-size  : 14px;
-    line-height: 1.5;
-    font-weight: 500;
-}
-
-.msg-body ul li.repaly {
-    display   : block;
-    width     : 100%;
-    text-align: right;
-    position  : relative;
-}
-
-.msg-body ul li.repaly:before {
-    display          : block;
-    clear            : both;
-    content          : '';
-    position         : absolute;
-    bottom           : 15px;
-    right            : -7px;
-    width            : 0;
-    height           : 0;
-    border-style     : solid;
-    border-width     : 0 12px 15px 12px;
-    border-color     : transparent transparent #E8E9ED transparent;
-    -webkit-transform: rotate(37deg);
-    -ms-transform    : rotate(37deg);
-    transform        : rotate(37deg);
-}
 
 .msg-body ul li.repaly p {
     color                    : var(--blue-zodiac);
     font-size                : 14px;
     line-height              : 1.5;
     font-weight              : 400;
-    padding                  : 15px;
+    padding                  : 5px 8px 5px 8px;
     background               : #E8E9ED;
     display                  : inline-block;
     border-top-left-radius   : 10px;
     border-top-right-radius  : 10px;
     border-bottom-left-radius: 10px;
     margin-bottom            : 0;
-}
-
-.msg-body ul li.repaly:after {
-    display: block;
-    content: '';
-    clear  : both;
 }
 
 .time {
@@ -1313,63 +1302,69 @@ li.repaly .time {
 }
 
 .send-box {
-    padding   : 15px;
-    border-top: 1px solid #ccc;
-}
-
-.send-box form {
-    display        : flex;
-    align-items    : center;
-    justify-content: space-between;
-    margin-bottom  : 15px;
+    padding : 15px;
+    position: relative;
 }
 
 .send-box .form-control {
     display           : block;
-    width             : 85%;
-    padding           : 0.375rem 0.75rem;
+    padding           : 14px 90px 14px 8px;
+    width             : 100%;
     font-size         : 14px;
     font-weight       : 400;
     line-height       : 1.5;
     color             : #222;
     background-color  : #fff;
     background-clip   : padding-box;
-    border            : 1px solid #ccc;
+    border            : 1px solid var(--white);
     -webkit-appearance: none;
     -moz-appearance   : none;
     appearance        : none;
-    border-radius     : 0.25rem;
+    border-radius     : 0px 0px 16px 16px;
     transition        : border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
-.send-box button {
-    border       : none;
-    background   : #3867d6;
-    padding      : 0.375rem 5px;
-    color        : #fff;
-    border-radius: 0.25rem;
-    font-size    : 14px;
-    font-weight  : 400;
-    width        : 24%;
-    margin-left  : 1%;
+.sendbtn {
+    height          : 38px;
+    width           : 38px;
+    position        : absolute;
+    background-color: var(--blue-zodiac);
+    border-radius   : 13px;
+    display         : block;
+    right           : 23px;
+    top             : 21px;
 }
 
-.send-box button i {
-    margin-right: 5px;
+.plusbtn {
+    position: absolute;
+    right   : 70px;
+    top     : 23px;
+    color   : var(--blue-zodiac);
 }
 
 .userprofile {
     outline : 0;
-    height  : 100%;
+    height  : 100vh;
     overflow: hidden;
     width   : 295px;
     float   : right;
     padding : 15px;
+    z-index : 2 !important;
 }
 
 .profile_drop .dropdown-toggle::after {
     position: absolute;
     right   : 0px;
+}
+
+.userdetail h6 {
+    color: #ABA8B0;
+
+}
+
+.userdetail p {
+    color: #47464A;
+
 }
 
 button:focus {
@@ -1399,6 +1394,10 @@ button:focus {
 .chat-icon,
 .profile-icon {
     display: none;
+}
+
+.chat-icon a {
+    text-decoration: underline;
 }
 
 .closess i {
@@ -1433,6 +1432,10 @@ button:focus {
         border-left: none;
     }
 
+    .chat-area .form-control {
+        width: 100%;
+    }
+
     .showbox,
     .showdivbox {
         left      : 0 !important;
@@ -1461,6 +1464,10 @@ button:focus {
 
     .chat-list p {
         font-size: 12px;
+    }
+
+    .msghead_smalscreen {
+        display: block;
     }
 
     .msg-body ul li.sender p {
@@ -1715,6 +1722,14 @@ button:focus {
         bottom: 54px;
         left  : 0;
         width : 70%;
+    }
+
+    .msg-head {
+        display: none;
+    }
+
+    .head_smalscreen {
+        display: block !important;
     }
 
 }
