--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ h4,
 h5 h6 {
     font-family: "NouvelleVague-Black";
     font-weight: 600;
+    color      : var(--blue-zodiac);
 }
 
 .container,
