--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,12 +353,29 @@ h5 h6 {
     color: var(--blue-zodiac);
 }
 
+.offcanvasbody h5 {
+    color: var(--blue-zodiac);
+}
+
+.offcanvasbody .nav .nav-link {
+    color  : var(--blue-zodiac);
+    opacity: 0.50;
+}
+
 .searchaddicon {
     display: none !important;
 }
 
 .searchaddicon li a {
     font-size: 20px;
+}
+
+.womenlarge a {
+    display: block;
+}
+
+.womensmall a {
+    display: none;
 }
 
 
@@ -436,11 +453,21 @@ h5 h6 {
 }
 
 .auction_cardtrack .container {
-    max-width: 1050px !important;
+    max-width: 1100px !important;
 }
 
 .active_btn a {
     background-color: #16204A;
+    border-radius   : 7px;
+    padding         : 8px 20px;
+    color           : white;
+    z-index         : 999;
+    top             : 10px;
+    right           : 10px;
+}
+
+.terminat_btn a {
+    background-color: #A4A4A4 !important;
     border-radius   : 7px;
     padding         : 8px 20px;
     color           : white;
@@ -1704,6 +1731,14 @@ button:focus {
 
     .newsletter_email {
         min-width: 70%;
+    }
+
+    .womenlarge a {
+        display: none;
+    }
+
+    .womensmall a {
+        display: block;
     }
 
 }
