--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -841,6 +841,16 @@ h5 h6 {
     width           : 260px;
 }
 
+.customsearch__card.active_btn {
+    height: 287px;
+}
+
+.customsearch__card .active_btn img {
+    width     : 260px;
+    height    : 285px;
+    object-fit: cover;
+}
+
 /* ============================== Custom Search End ============================== */
 /* ============================== Small screens footer Start ============================== */
 .footer_block {
@@ -1908,6 +1918,11 @@ button:focus {
     .customsearch__card {
         background-color: var(--white);
         margin          : auto;
+    }
+
+    .customsearch__card .active_btn img {
+        width : 100%;
+        height: 100%;
     }
 
     .dropdown_wrapper {
