--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1045,7 +1045,7 @@ h5 h6 {
 }
 
 .product_navs .nav-item button,
-.auction_navs a {
+.auction_navs button {
     background-color: transparent !important;
     color           : var(--blue-zodiac);
     opacity         : 0.70;
@@ -1150,6 +1150,47 @@ h5 h6 {
 .newaddress {
     border: 2px solid var(--blue-zodiac);
     color : var(--blue-zodiac);
+}
+
+.onoffbtn {
+    width        : 50px;
+    height       : 25px;
+    border-radius: 15px;
+    background   : #fff;
+    filter       : drop-shadow(0px 0px 2.5px rgba(0, 0, 0, 0.14));
+    display      : block;
+    position     : relative;
+}
+
+.onoffbtn:after {
+    position          : absolute;
+    height            : 23px;
+    width             : 23px;
+    display           : block;
+    border-radius     : 50%;
+    background        : #16204A;
+    top               : 1px;
+    left              : 1px;
+    content           : '';
+    -webkit-transition: all 200ms ease-in-out;
+    -moz-transition   : all 200ms ease-in-out;
+    -o-transition     : all 200ms ease-in-out;
+    transition        : all 200ms ease-in-out;
+    text-align        : center;
+    line-height       : 29px;
+    color             : #fff;
+    font-size         : 12px;
+}
+
+.onoffbtn.active:after {
+    left       : 100%;
+    margin-left: -23px;
+    background : #AD7B2B;
+    content    : '';
+}
+
+.onoffbtn input[type="checkbox"] {
+    opacity: 0;
 }
 
 /* other Auction Card End */
