--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,6 +651,11 @@ h5 h6 {
     cursor: pointer;
 }
 
+.slide_item img {
+    width : 387px;
+    height: 195px
+}
+
 .slick-prev:before,
 .slick-next:before {
     font-family: 'slick' !important;
@@ -838,11 +843,11 @@ h5 h6 {
 
 .customsearch__card {
     background-color: var(--white-smoke);
-    width           : 260px;
 }
 
 .auction_card.active_btn {
     height: 287px;
+    width : 260px;
 }
 
 .auction_card .active_btn img {
@@ -1984,7 +1989,7 @@ button:focus {
         margin          : auto;
     }
 
-    .customsearch__card .active_btn img {
+    .auction_card .active_btn img {
         width : 100%;
         height: 100%;
     }
