--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -853,8 +853,8 @@ h5 h6 {
 }
 
 .auction_card.active_btn {
-    height: 287px;
     width : 260px;
+    height: 287px;
 }
 
 .auction_card .active_btn img {
@@ -1992,6 +1992,11 @@ button:focus {
         height: 100%;
     }
 
+    .maincards .active_btn img {
+        width : 260px;
+        height: 285px;
+    }
+
     .dropdown_wrapper {
         background-color: var(--white);
         box-shadow      : var(--search-btn-box-shadow);
@@ -2013,11 +2018,6 @@ button:focus {
         background   : black;
         border-radius: 20px 20px 0 0;
     }
-
-    /* .active_btn img {
-        width : 100%;
-        height: 100%;
-    } */
 
     .filter_search {
         display        : flex;
