--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,6 +508,16 @@ h6 {
     padding: 0 !important;
 }
 
+.maincards .active_btn img {
+    width : 260px !important;
+    height: 250px;
+}
+
+.auction_card .active_btn img {
+    width : 260px !important;
+    height: 250px;
+}
+
 .active_btn img {
     border-radius   : 11px;
     filter          : var(--card-box-shadow);
@@ -1931,7 +1941,10 @@ button:focus {
         border-radius: 20px 0 0 20px;
     }
 
-
+    .auction_card .active_btn img {
+        width : 100%;
+        height: 250px;
+    }
 
     .about h1 {
         font-size    : 35px;
@@ -2021,12 +2034,12 @@ button:focus {
     }
 
     .maincards .active_btn img {
-        width : 260px !important;
+        width : 260px;
         height: 250px;
     }
 
     .auction_card .active_btn img {
-        width : 100% !important;
+        width : 260px;
         height: 250px;
     }
 
@@ -2152,4 +2165,6 @@ button:focus {
         color    : var(--blue-zodiac);
         font-size: 22px;
     }
+
+
 }
