--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1278,7 +1278,7 @@ h6 {
 .chatbox {
     width   : 476px;
     overflow: hidden;
-    height  : 100%;
+    height  : 100vh;
 
 }
 
@@ -1690,6 +1690,12 @@ button:focus {
 
     .msg-head .flex-shrink-0 img {
         height: 30px;
+    }
+
+    .send-box {
+        position: -webkit-sticky;
+        position: sticky !important;
+        bottom  : 0;
     }
 
     .send-box button {
@@ -2166,5 +2172,9 @@ button:focus {
         font-size: 22px;
     }
 
+    .chatbox {
+        overflow: hidden;
+        height  : 75vh;
 
+    }
 }
