--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2172,6 +2172,11 @@ button:focus {
         font-size: 22px;
     }
 
+    .chat-area {
+        width : 100%;
+        height: 630px;
+    }
+
     .chatbox {
         overflow: scroll;
         height  : 630px;
