--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,6 +618,13 @@ h6 {
     display         : block;
 }
 
+.heading_hr {
+    width  : 15%;
+    height : 2px !important;
+    color  : #AD7B2B;
+    opacity: 1;
+}
+
 .custom_control {
     background-color: var(--white-smoke);
 }
